--- a/lojinha/package.json
+++ b/lojinha/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
+    "expo-linear-gradient": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
