--- a/lojinha/package.json
+++ b/lojinha/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-linear-gradient": "~10.0.3",
+    "expo-sqlite": "~10.0.3",
+    "expo-sqlite-orm": "^1.5.6",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -28,7 +30,8 @@
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "^17.0.37"
   },
   "private": true
 }
