--- a/lojinha/package.json
+++ b/lojinha/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
-    "expo-linear-gradient": "~10.0.3",
+    "expo-linear-gradient": "^10.0.3",
     "expo-sqlite": "~10.0.3",
     "expo-sqlite-orm": "^1.5.6",
     "expo-status-bar": "~1.1.0",
