--- a/lojinha/package.json
+++ b/lojinha/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "app": "^0.1.0",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
     "expo-linear-gradient": "^10.0.3",
     "expo-sqlite": "~10.0.3",
     "expo-sqlite-orm": "^1.5.6",
     "expo-status-bar": "~1.1.0",
+    "intro": "^1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -30,6 +32,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1",
+    "slider": "^1.0.4",
     "yet": "^0.1.0"
   },
   "devDependencies": {
