--- a/lojinha/package.json
+++ b/lojinha/package.json
@@ -16,9 +16,6 @@
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "expo": "~43.0.2",
-    "expo-linear-gradient": "~10.0.3",
-    "expo-sqlite": "~10.0.3",
-    "expo-sqlite-orm": "^1.5.6",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -33,8 +30,7 @@
     "yet": "^0.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "^17.0.37"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
